# Fish-Shoal-Simulation-In-CUDA

./: CMakeLists.txt  Makefile  README.md  fishShoal
include/: boid.h  config.h  constants.h  draw_boids_cpu.h  draw_boids_gpu.h  kernel.h  update_boids_cpu.h  update_boids_gpu.h
makefiles/: Makefile
src/: boid.cu  config.cu  draw_boids_cpu.cu  draw_boids_gpu.cu  fishShoal.cu  kernel.cu  update_boids_cpu.cu  update_boids_gpu.cu
test/: CMakeLists.txt  main.cu
